# alpha_berkeley

./: .gitignore  CHANGELOG.md  CLAUDE.md  COLLAPSIBLE_LOGS_IMPLEMENTATION.md  DOCS_RENAME_PROGRESS.md  LICENSE.txt  OSPREY_RENAME_TODO.md  README.md  RELEASE_NOTES.md  RENAME_PROGRESS.md  V09_TESTING_GUIDE.md  config.yml  env.example  launch_doc_agents.sh  launch_remaining_agents.sh  paper_outline.tex  pyproject.toml  pytest.ini  renaming_guidelines.md  requirements.txt  update_progress.py
.github/: pull_request_template.md
.github/workflows/: docs.yml
_issues/: 001-application-framework-redesign.md  initial_repo_structure.txt  provider_registry.md
api_folder/: client.py  config.py  motor_examples.md  output_measurement.ipynb  reconstruction.py  run_tomography_scan.py  server.py  take_measurement.ipynb  take_measurement.py
deployment/: __init__.py  container_manager.py  loader.py
docs/: LOCAL_TESTING.md  Makefile  config.yml  launch_docs.py
docs/resources/other/: DOCSTRINGS.md  RELEASE_WORKFLOW.md
docs/ressources/: 00_general.md  01_landing_page.md  02_getting_started.md  03_developer_guide.md  04_api_guide.md  0x_cleanup_status.md
docs/ressources/other/: COMMENTS.md  EXECUTION_POLICY_SYSTEM.md  RELEASE_WORKFLOW.md  UPDATE_DOCS.md  cleanup.md  execution_plan_viewer.md  see_also.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api_reference/: index.rst
docs/source/contributing/: index.rst
docs/source/developer-guides/: index.rst
docs/source/example-applications/: als-assistant.rst  index.rst
docs/source/getting-started/: build-your-first-agent.rst  conceptual-tutorial.rst  control-assistant-entry.rst  control-assistant-part1-setup.rst  control-assistant-part2-channel-finder.rst  control-assistant-part3-production.rst  control-assistant-part4-customization.rst  control-assistant.rst  hello-world-tutorial.rst  index.rst  installation.rst  migration-guide.rst
interfaces/CLI/: direct_conversation.py
interfaces/openwebui/: main.py
scripts/: generate_mcp_capability.py
services/: docker-compose.yml.j2
services/applications/als_assistant/pv_finder/: Dockerfile  README.md  docker-compose.yml.j2  pyproject.toml  requirements.txt
services/applications/als_assistant/pv_finder/src/: main.py
services/applications/als_assistant/pv_finder/tests/: test_pv_finder_server.py
services/framework/jupyter/: Dockerfile  custom_start.sh  docker-compose.yml.j2  startup_script.py
services/framework/langfuse/: docker-compose.yml.j2
services/framework/mem0/: README.md  docker-compose.yml.j2  mcp_config.json  mcp_config_python.json  pyproject.toml  requirements.txt
services/framework/open-webui/: Dockerfile  custom.css  docker-compose.yml.j2
services/framework/pipelines/: docker-compose.yml.j2
src/: setup.py
src/applications/als_assistant/: config.yml  context_classes.py  initialization.py  registry.py
src/applications/bolt/: README.md  bolt_api.py  config.yml  context_classes.py  ply_quality_analyzer.py  registry.py
src/applications/hello_world_weather/: README.md  config.yml  context_classes.py  registry.py
src/applications/wind_turbine/: config.yml  context_classes.py  mock_apis.py  registry.py
src/configs/: __init__.py  config.py  logger.py  streaming.py  unified_config.py
src/framework/: __init__.py  config.yml
src/framework/approval/: __init__.py  approval_manager.py  approval_system.py  evaluators.py
src/framework/base/: __init__.py  capability.py  decorators.py  errors.py  examples.py  nodes.py  planning.py  results.py
src/framework/capabilities/: memory.py  python.py  time_range_parsing.py
src/framework/cli/: __init__.py  chat_cmd.py  deploy_cmd.py  export_config_cmd.py  health_cmd.py  init_cmd.py  interactive_menu.py  main.py  project_utils.py  templates.py
src/framework/commands/: __init__.py  categories.py  registry.py  types.py
src/framework/context/: base.py  context_manager.py  loader.py
src/framework/data_management/: __init__.py  manager.py  providers.py  request.py
src/framework/deployment/: __init__.py  container_manager.py
src/framework/graph/: __init__.py  graph_builder.py
src/framework/infrastructure/: clarify_node.py  classification_node.py  error_node.py  gateway.py  orchestration_node.py  respond_node.py  router_node.py  task_extraction_node.py
src/framework/interfaces/: __init__.py
src/framework/models/: __init__.py  completion.py  factory.py
src/framework/prompts/: __init__.py  base.py  loader.py
src/framework/registry/: __init__.py  base.py  helpers.py  manager.py  registry.py
src/framework/services/: __init__.py
src/framework/state/: __init__.py  control.py  execution.py  messages.py  session.py  state.py  state_manager.py
src/framework/templates/: __init__.py
src/framework/utils/: __init__.py  config.py  log_filter.py  logger.py  streaming.py
src/osprey/: __init__.py
src/osprey/approval/: __init__.py  approval_manager.py  approval_system.py  config_models.py  evaluators.py
src/osprey/base/: __init__.py  capability.py  decorators.py  errors.py  examples.py  nodes.py  planning.py  results.py
src/osprey/capabilities/: memory.py  python.py  time_range_parsing.py
src/osprey/cli/: __init__.py  chat_cmd.py  deploy_cmd.py  export_config_cmd.py  generate_cmd.py  health_cmd.py  init_cmd.py  interactive_menu.py  main.py  preview_styles.py  project_utils.py  registry_cmd.py  styles.py  templates.py
src/osprey/commands/: __init__.py  categories.py  (+3 more)
tests/: __init__.py
tests/cassettes/: README.md
tests/cli/: __init__.py  test_templates.py
tests/config/: test_config_builder.py
tests/connectors/: __init__.py  test_connector_factory.py  test_mock_connector.py  test_pattern_detection.py
tests/deployment/: __init__.py  test_container_status.py  test_runtime_helper.py
tests/integration/: test_e2e_workflow.py
tests/registry/: __init__.py  test_path_based_discovery.py  test_provider_registration.py  test_registry_helpers.py  test_registry_loading.py  test_registry_modes.py  test_registry_validation.py
tests/utils/: __init__.py  test_log_filter.py
(+547 files in other folders)
